# detect-bad-frames

./: .gitignore  LICENSE  README.md  detectbadframes  detectbadframes.py  pyproject.toml
specs/: godot.json  pyxel_edit.json
