[tool.poetry]
name = "detectbadframes"
version = "0.1.1"
description = ""
authors = ["Kevin Houlihan <kevin@crimsoncookie.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^7.1.2"

[tool.poetry.scripts]
detectbadframes = "detectbadframes:_main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
